--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/jononekin/ldw.github.io">Linked Data Wrapper HomePage</a>
 
-          <h1 id="project_title">Ldw.GitHub.io</h1>
-          <h2 id="project_tagline">ldw repository</h2>
+          <h1 id="project_title">Linked Data Wrapper HomePage</h1>
+          <h2 id="project_tagline">Linked Data Wrapper HomePage</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/jononekin/ldw.github.io/zipball/master">Download this project as a .zip file</a>
